--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="cou.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500;700&family=Overpass&family=Raleway&family=Roboto+Serif:ital,opsz,wght@0,8..144,300;1,8..144,200;1,8..144,300&family=Space+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
         <h2>Counter</h2>
         <span id="value">0</span>
-        <div>
+        <div class="btns">
             <button class="btn-decrease">Decrease</button>
             <button class="btn-reset">Reset</button>
             <button class="btn-increase">Increase</button>
