--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         <h2>Counter</h2>
         <span id="value">0</span>
         <div class="btns">
-            <button class="btn-decrease">Decrease</button>
-            <button class="btn-reset">Reset</button>
-            <button class="btn-increase">Increase</button>
+            <button class="btn decrease">Decrease</button>
+            <button class="btn reset">Reset</button>
+            <button class="btn increase">Increase</button>
         </div>
     </main>
+    <script src="cou.js"></script>
 </body>
 </html>
