js html comment

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <main>
-        <h2>Counter</h2>
+        <!-- <h2>Counter</h2>
         <span id="value">0</span>
         <div class="btns">
             <button class="btn decrease">Decrease</button>
             <button class="btn reset">Reset</button>
             <button class="btn increase">Increase</button>
-        </div>
+        </div> -->
     </main>
     <script src="cou.js"></script>
 </body>
