--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Review</title>
     <link rel="stylesheet" href="cou.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500;700&family=Overpass&family=Raleway&family=Roboto+Serif:ital,opsz,wght@0,8..144,300;1,8..144,200;1,8..144,300&family=Space+Mono&display=swap" rel="stylesheet">
 </head>
@@ -16,6 +16,12 @@
             <button class="btn reset">Reset</button>
             <button class="btn increase">Increase</button>
         </div> -->
+        <article>
+            <div>
+       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAQOjQv4XkHC5W8pOLtAR1JOvXT6Epmq0eU6NvbPtP4AbDXh3wTdMGKKGK2VQsM5xP_CM&usqp=CAU" alt="">
+            </div>
+        </article>
+        
     </main>
     <script src="cou.js"></script>
 </body>
