--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <main>
+        <section class="container">
         <!-- <h2>Counter</h2>
         <span id="value">0</span>
         <div class="btns">
@@ -16,12 +17,25 @@
             <button class="btn reset">Reset</button>
             <button class="btn increase">Increase</button>
         </div> -->
+<div>
+    <h2>Our Reviews</h2>
+    <div class="underline"></div>
+</div>
         <article>
+            <div class="image-container"></div>
             <div>
        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAQOjQv4XkHC5W8pOLtAR1JOvXT6Epmq0eU6NvbPtP4AbDXh3wTdMGKKGK2VQsM5xP_CM&usqp=CAU" alt="">
             </div>
+            <h4 class="name">peter johns</h4>
+            <p id="job">FE designer</p>
+            <p id="description">This is the best product i have <br> used
+            since i started purchasing sun glasses!</p>
+            <div>
+
+            </div>
+            <button class="random">Surprise me</button>
         </article>
-        
+    </section>
     </main>
     <script src="cou.js"></script>
 </body>
