--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
             <button class="btn reset">Reset</button>
             <button class="btn increase">Increase</button>
         </div> -->
-<div>
+<div class="underline">
     <h2>Our Reviews</h2>
-    <div class="underline"></div>
-</div>
+    </div>
         <article>
-            <div class="image-container"></div>
+            <div class="image-container">
             <div>
-       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAQOjQv4XkHC5W8pOLtAR1JOvXT6Epmq0eU6NvbPtP4AbDXh3wTdMGKKGK2VQsM5xP_CM&usqp=CAU" alt="">
+       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAQOjQv4XkHC5W8pOLtAR1JOvXT6Epmq0eU6NvbPtP4AbDXh3wTdMGKKGK2VQsM5xP_CM&usqp=CAU" alt="" id="img">
             </div>
             <h4 class="name">peter johns</h4>
             <p id="job">FE designer</p>
@@ -34,6 +33,7 @@
 
             </div>
             <button class="random">Surprise me</button>
+        </div>
         </article>
     </section>
     </main>
