js variable & arrays

--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
             <div>
        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAQOjQv4XkHC5W8pOLtAR1JOvXT6Epmq0eU6NvbPtP4AbDXh3wTdMGKKGK2VQsM5xP_CM&usqp=CAU" alt="" id="img">
             </div>
-            <h4 class="name">peter johns</h4>
+            <h4 id="name">peter johns</h4>
             <p id="job">FE designer</p>
             <p id="description">This is the best product i have <br> used
             since i started purchasing sun glasses!</p>
-            <div>
-
+            <div class="btn">
+<button class="prev">prev</button>
+<button class="next">next</button>
             </div>
             <button class="random">Surprise me</button>
         </div>
